# misis2025s-3-Mosiagin-I-A

./: README.md
lab05/: CMakeLists.txt  kr-task.cpp  readme.md
lab1/: CMakeLists.txt
lab1/apps/task01-01/: CMakeLists.txt  main.cpp
lab1/apps/task01-02/: CMakeLists.txt  main.cpp
lab1/semcv/include/semcv/: semcv.hpp
lab2/: CMakeLists.txt  readme.md  task02-stats.cpp  task02.cpp
lab3/: CMakeLists.txt  readme.md  task03.cpp
lab4/: CMakeLists.txt  readme.md  task04_02.cpp  task04_03.cpp
lab4/detections/jsons/: 1.json  2.json  3.json  4.json  detections.lst
lab4/test-examples/ground-truth/: 1.json  2.json  3.json  4.json  ground-truth.lst
lab6/: CMakeLists.txt  readme.md  task06.cpp
lab7/: CMakeLists.txt  readme.md  task07-01.cpp  task07-02.cpp
lab7/outputs/jsons/: 1.json  2.json  3.json  4.json
lab7/outputs/metrics/: metric1.json  metric2.json  metric3.json  metric4.json
lab8/: CMakeLists.txt  readme.md  task08.cpp
semcv/: CMakeLists.txt  semcv.cpp
semcv/include/semcv/: semcv.hpp
semcv/src/: semcv.cpp
